sandbox/output
fizzbuzz.c: In function 'fizzBuzzSeq':
fizzbuzz.c:29:5: error: statement with no effect [-Werror=unused-value]
     val;
     ^
cc1: all warnings being treated as errors
make: *** [test] Error 1
